# auto-improving-kernel

./: .gitignore  README.md  bench.py  check_cuda.py  install_cuda128.sh  install_nvcc.sh  kernel.cu  kernel.py  plot.py  prepare.py  program.md  pyproject.toml
