[project]
name = "autokernel"
version = "0.1.0"
description = "Autonomous GPU kernel optimization (autoresearch for Triton kernels)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "torch==2.9.1",
]

[tool.uv.sources]
torch = [
    { index = "pytorch-cu128" },
]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true
